# retail-vision

./: .gitignore  RESEARCH_2026_CCTV_ANALYTICS.md  RETAILVISION_SPEC_v4.md  v4-architecture.mermaid  v4-calibration.mermaid  v4-depth-as-knowledge.mermaid  v4-vlm-toolkit.mermaid
retailvision/: .env.example  .gitignore  ARCHITECTURE.md  Makefile  pyproject.toml
retailvision/agent/: __init__.py  config.py  gates.py  models.py  orchestrator.py  state.py  strategy_profiles.py
retailvision/agent/tools/: __init__.py  phase1_calibrate.py  phase1_depth.py  phase1_ingest.py  phase1_llm_params.py  phase1_scene.py  phase2_dwell.py  phase2_fusion.py  phase2_strategy_a.py  (+16 more)
retailvision/api/: chat_prompt.py  chat_server.py  chat_tools.py  data_tools.py  session_store.py
retailvision/dashboard/: index.html  package-lock.json  package.json  vite.config.js
retailvision/scripts/: _debug_chat.py  check_video.py  demo_e2e.py  generate_composite_viz.py  generate_synthetic.py  generate_viz.py  inspect_data.py  process_video.py  run_chat_server.py  run_pipeline.py  run_tracker.py  test_ssa.py
retailvision/tests/: conftest.py  test_analytics.py  test_calibration.py  test_chat_prompt.py  test_chat_server.py  test_chat_tools.py  test_config.py  test_data_tools.py  test_database.py  test_dwell.py  test_gates.py  test_integration.py  test_merge.py  test_quick_analytics.py  test_registry.py  test_session_store.py  test_strategies.py  test_strategy_profiles.py  test_validation.py
retailvision/tracker/: __init__.py  botsort_retail.yaml  config.py  database.py  detector.py  schema.sql
(+59 files in other folders)
