[project]
name = "retailvision"
version = "0.1.0"
description = "Agentic Zone Discovery Pipeline for CCTV Retail Analytics"
requires-python = ">=3.11"
dependencies = [
    "ultralytics>=8.3.0",
    "opencv-python-headless>=4.10.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.14.0",
    "scikit-learn>=1.5.0",
    "loguru>=0.7.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "replicate>=1.0.0",
    "Pillow>=10.4.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "networkx>=3.3",
    "python-louvain>=0.16",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.8.0",
    "tqdm>=4.66.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sse-starlette>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
rv-track = "scripts.run_tracker:main"
rv-pipeline = "scripts.run_pipeline:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
